# Example

include/: foo.hpp
src/: foo.cpp
test/: CMakeLists.txt  main.cc
